--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8621,3 +8621,15 @@ p.forgot-password {
 nav a#pull {
   display: none;
 }
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
