--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1572,9 +1572,9 @@ ol.digit-list p {
 .orange-red-hover:hover,
 .scroll .orange-red-hover:hover,
 .white-color .orange-red-hover:hover {
-  color: #fff !important;
-  background-color: #ff523d !important;
-  border-color: #ff523d !important;
+  color: #1d293f !important;
+  background-color: #fbce71 !important;
+  border-color: #fbce71 !important;
 }
 
 .btn-tra-orange-red,
