--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4563,7 +4563,7 @@ p.terms-txt a,
   background-image: url(../images/hero-20.jpg);
   padding-top: 170px;
   padding-bottom: 100px;
-  height:100vh;
+  /* height:100vh; */
 }
 
 .hero-20-txt {
