--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7804,7 +7804,11 @@ h5.posts-category {
 .rtl-direction #footer-1 .footer-info p {
   padding-left: 5%;
 }
-
+#footer-1 {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 #footer-1 .footer-links {
   padding-left: 10%;
 }
