--- a/public/css/style.css
+++ b/public/css/style.css
@@ -804,7 +804,7 @@ body {
 }
 
 .text-red {
- color: #f6412d;
+  color: #f6412d;
 }
 
 .bg-salmon {
@@ -8444,7 +8444,7 @@ p.forgot-password {
   background: #fff;
   border: 1px solid #fafafa;
   margin: 0 35px;
-  padding: 50px 25px 55px;
+  padding: 50px;
   -webkit-border-radius: 16px;
   -moz-border-radius: 16px;
   border-radius: 16px;
@@ -8803,4 +8803,10 @@ nav a#pull {
 
 .plans .btn {
   margin: 10px;
+}
+
+input.checkbox-input {
+  margin-left: 20px;
+  width: 20px;
+  height: 20px;
 }
