--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8594,3 +8594,70 @@ input.checkbox-input {
 		font-size: 2.8rem;
 	}
 } */
+.h3-font {
+	font-size: 1.5rem;
+}
+.h4-font {
+	font-size: 1.25rem;
+}
+@media (min-width: 992px) and (max-width: 1199.95px) {
+	.h3-font {
+		font-size: 1.25rem;
+	}
+	.h4-font {
+		font-size: 1.125rem;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 991.95px) {
+	.h3-font {
+		font-size: 1.2rem;
+	}
+	.h4-font {
+		font-size: 1.125rem;
+	}
+}
+
+@media (max-width: 767px) {
+	.h3-font {
+		font-size: 1.1875rem;
+	}
+	.h4-font {
+		font-size: 1.15rem;
+	}
+}
+
+@media (min-width: 480px) and (max-width: 767.95px) {
+	.h3-font {
+		font-size: 1.1875rem;
+	}
+	.h4-font {
+		font-size: 1.15rem;
+	}
+}
+@media (min-width: 414px) and (max-width: 479.95px) {
+	.h3-font {
+		font-size: 1.125rem;
+	}
+	.h4-font {
+		font-size: 1.0625rem;
+	}
+}
+
+@media (min-width: 321px) and (max-width: 413.95px) {
+	.h3-font {
+		font-size: 1.125rem;
+	}
+	.h4-font {
+		font-size: 1.0625rem;
+	}
+}
+
+@media (max-width: 320.95px) {
+	.h3-font {
+		font-size: 1.125rem;
+	}
+	.h4-font {
+		font-size: 1.0625rem;
+	}
+}
