--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8522,9 +8522,9 @@ nav a#pull {
 
 .side-bar {
 	background-color: #fff;
-	height: 100vh;
-	/* border-radius: 0 16px 16px 0; */
+	border-radius: 16px;
 	box-shadow: 15px 20px 20px 0px rgb(5 5 5 / 5%);
+	padding: 35px;
 }
 
 .tab-group {
