--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4132,7 +4132,7 @@ p.terms-txt a,
   ul.link-list
   > li
   > a:hover {
-  color: #ff523d !important;
+  color: #fbce71 !important;
 }
 
 .wsmenu > .wsmenu-list.nav-pink-hover > li > ul.sub-menu > li > a:hover,
@@ -9468,5 +9468,5 @@ span.close-btn {
   }
 }
 .hero-1-img img {
-  max-height:500px;
+  max-height: 500px;
 }
