--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5221,15 +5221,15 @@ p.terms-txt a,
 
 .header-advantages li {
   width: auto !important;
-    display: inline-block !important;
-    vertical-align: top;
-    clear: none !important;
-    padding-left: 5px;
-    border: solid 1px #ccc;
-    padding: 5px 15px;
-    border-radius: 33px;
-    margin-right: 15px;
-    margin-bottom: 10px;
+  display: inline-block !important;
+  vertical-align: top;
+  clear: none !important;
+  padding-left: 5px;
+  border: solid 1px #ccc;
+  padding: 5px 15px;
+  border-radius: 33px;
+  margin-right: 15px;
+  margin-bottom: 10px;
 }
 
 /*------------------------------------------*/
@@ -9491,4 +9491,25 @@ span.close-btn {
 }
 .hero-1-img img {
   max-height: 500px;
+}
+
+.img_wrap {
+  width: auto;
+  height: 100px;
+  /* border: 1px solid #eee; */
+  cursor: pointer;
+}
+.active-product {
+  border: 2px solid #d9a444;
+  border-radius: 8px;
+}
+
+.default-div {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
 }
