--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9495,9 +9495,10 @@ span.close-btn {
 
 .img_wrap {
   width: auto;
-  height: 100px;
-  /* border: 1px solid #eee; */
+  height: 60px;
+  border: 1px solid #eee;
   cursor: pointer;
+  border-radius: 8px;
 }
 .active-product {
   border: 2px solid #d9a444;
@@ -9512,4 +9513,14 @@ span.close-btn {
   font: inherit;
   cursor: pointer;
   outline: inherit;
+  margin-right: 6px;
+}
+.react-multi-carousel-item {
+  margin-bottom: 75px !important;
+}
+.react-multi-carousel-item img {
+  border-radius: 8px;
+}
+.react-multiple-carousel__arrow {
+  margin-bottom: 75px;
 }
