--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -4392,7 +4392,7 @@
 	}
 
 	.wsmobileheader {
-		height: 80px;
+		height: 50px;
 		box-shadow: 0 0 2px rgba(50, 50, 50, 0.4);
 	}
 	.tra-menu .wsmobileheader,
@@ -4633,7 +4633,7 @@
   /*------------------------------------------*/
 
 	.hero-section {
-		margin-top: 80px;
+		margin-top: 00px;
 	}
 
 	.hero-section ul.simple-list {
@@ -10456,12 +10456,12 @@
 
 	.wsanimated-arrow {
 		padding: 14px 30px 14px 0px;
-		margin: 25px 18px 0 0;
+		margin: 10px 18px 0 0;
 	}
 
 	.wsmobileheader .smllogo {
 		display: block;
-		margin-top: 22px;
+		margin-top: 8px;
 		padding-left: 18px;
 	}
 	.smllogo img {
@@ -10831,9 +10831,16 @@
 
 	/* Hero-20 */
 	.hero-20-txt h1 {
-		font-size: 1.85rem !important;
-		padding: 0 3%;
+		font-size: 2.1rem !important;
+		/* padding: 0 3%; */
 		margin-bottom: 15px;
+	}
+	#hero-20 {
+		background-image: none !important;
+		background-color: #6a26db;
+	}
+	.request-quote-feature {
+		display: none;;
 	}
 	.hero-20-txt h2 {
 		font-size: 1.85rem;
