--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5000,17 +5000,29 @@ p.terms-txt a,
 	font-size: 12px;
 }
 
+ul.header-advantages {
+	text-align: left;
+}
+
 .header-advantages li {
-	width: auto !important;
-	display: inline-block !important;
-	vertical-align: top;
-	clear: none !important;
-	padding-left: 5px;
-	border: solid 1px #ccc;
-	padding: 5px 15px;
-	border-radius: 33px;
-	margin-right: 15px;
-	margin-bottom: 10px;
+    width: 100% !important;
+    display: inline-block !important;
+    vertical-align: top;
+    clear: none !important;
+    margin-bottom: 18px;
+}
+.header-advantages li span {
+	float: left;
+	margin-left: 35px;
+	font-size: 18px;
+    line-height: 24px;
+}
+.check-box-icon {
+	float: left;
+	width: 20px;
+	margin-right: 10px;
+	position: absolute;
+	margin-top: 3px;
 }
 
 /*------------------------------------------*/
@@ -9297,4 +9309,7 @@ span.close-btn {
 }
 .react-multiple-carousel__arrow {
 	margin-bottom: 75px;
+}
+h1.h1-md.white-color.text-left {
+    text-align: left;
 }
