--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3616,7 +3616,7 @@ p.terms-txt a,
 	float: left;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li {
+.rtl-direction .wsmenu > .wsmenu-list > li {
 	float: right;
 }
 
@@ -3673,7 +3673,7 @@ p.terms-txt a,
 /*  HEADER LINK
 /*------------------------------------------*/
 
-.wsmenu>.wsmenu-list>li>a {
+.wsmenu > .wsmenu-list > li > a {
 	display: block;
 	font-size: 17px;
 	font-weight: 500;
@@ -3684,25 +3684,25 @@ p.terms-txt a,
 	text-decoration: none;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li>a {
+.rtl-direction .wsmenu > .wsmenu-list > li > a {
 	font-size: 22px;
 	text-align: right !important;
 }
 
-.navbar-dark .wsmenu>.wsmenu-list>li>a {
+.navbar-dark .wsmenu > .wsmenu-list > li > a {
 	color: #2c3e50;
 }
 
-.navbar-light .wsmenu>.wsmenu-list>li>a {
+.navbar-light .wsmenu > .wsmenu-list > li > a {
 	color: #fff;
 }
 
-.wsmenu>.wsmenu-list>li>a.last-link {
+.wsmenu > .wsmenu-list > li > a.last-link {
 	padding: 10px 0px;
 	margin: 0 0 0 7px;
 }
 
-.wsmenu>.wsmenu-list>li>a .wsarrow:after {
+.wsmenu > .wsmenu-list > li > a .wsarrow:after {
 	border-left: 4px solid rgba(0, 0, 0, 0);
 	border-right: 4px solid rgba(0, 0, 0, 0);
 	border-top: 4px solid;
@@ -3721,7 +3721,7 @@ p.terms-txt a,
 /*  HEADER BUTTONS
 /*------------------------------------------*/
 
-.wsmenu>.wsmenu-list>li a.btn {
+.wsmenu > .wsmenu-list > li a.btn {
 	font-size: 16.5px;
 	line-height: 30px;
 	font-weight: 500;
@@ -3732,11 +3732,11 @@ p.terms-txt a,
 	padding: 5px 30px;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li a.btn {
+.rtl-direction .wsmenu > .wsmenu-list > li a.btn {
 	font-size: 20px;
 }
 
-.wsmenu>.wsmenu-list>li a.header-store {
+.wsmenu > .wsmenu-list > li a.header-store {
 	margin: 8px 0 0 12px;
 	padding: 0;
 }
@@ -3780,7 +3780,7 @@ p.terms-txt a,
 /*  HEADER SUBMENU
 /*------------------------------------------*/
 
-.wsmenu>.wsmenu-list>li>ul.sub-menu {
+.wsmenu > .wsmenu-list > li > ul.sub-menu {
 	padding: 12px 20px;
 	width: auto;
 	min-width: 200px;
@@ -3793,7 +3793,7 @@ p.terms-txt a,
 	box-shadow: 0 2px 3px rgba(96, 96, 96, 0.1);
 }
 
-.wsmenu>.wsmenu-list>li>ul.sub-menu:before {
+.wsmenu > .wsmenu-list > li > ul.sub-menu:before {
 	content: '';
 	background-color: #fff;
 	position: absolute;
@@ -3809,7 +3809,7 @@ p.terms-txt a,
 	z-index: -2;
 }
 
-.wsmenu>.wsmenu-list>li>ul.sub-menu>li>a {
+.wsmenu > .wsmenu-list > li > ul.sub-menu > li > a {
 	color: #2c3e50;
 	font-size: 16px;
 	font-weight: 500;
@@ -3817,7 +3817,7 @@ p.terms-txt a,
 	transition: all 0.3s ease-in-out;
 }
 
-.wsmenu>.wsmenu-list>li>ul.sub-menu>li>a span {
+.wsmenu > .wsmenu-list > li > ul.sub-menu > li > a span {
 	color: #ff523d;
 	font-size: 0.6rem;
 	position: relative;
@@ -3825,16 +3825,16 @@ p.terms-txt a,
 	left: 1px;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li>ul.sub-menu>li>a {
+.rtl-direction .wsmenu > .wsmenu-list > li > ul.sub-menu > li > a {
 	font-size: 19px;
 	text-align: right !important;
 }
 
-.wsmenu>.wsmenu-list>li>ul.sub-menu>li>a:hover {
+.wsmenu > .wsmenu-list > li > ul.sub-menu > li > a:hover {
 	padding: 8px 0 8px 8px;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li>ul.sub-menu>li>a:hover {
+.rtl-direction .wsmenu > .wsmenu-list > li > ul.sub-menu > li > a:hover {
 	padding: 8px 8px 8px 0;
 }
 
@@ -3842,11 +3842,11 @@ p.terms-txt a,
 /*   HALFMENU
 /*------------------------------------------*/
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu {
+.wsmenu > .wsmenu-list > li > .wsmegamenu {
 	top: 65px;
 }
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu {
+.wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu {
 	width: 36%;
 	padding: 15px 10px;
 	-webkit-border-radius: 8px;
@@ -3857,7 +3857,7 @@ p.terms-txt a,
 	box-shadow: 0 2px 3px rgba(96, 96, 96, 0.1);
 }
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu:before {
+.wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu:before {
 	content: '';
 	background-color: #fff;
 	position: absolute;
@@ -3873,12 +3873,12 @@ p.terms-txt a,
 	z-index: -2;
 }
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu .link-list li {
+.wsmenu > .wsmenu-list > li > .wsmegamenu .link-list li {
 	border-bottom: none;
 }
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu.w-75 ul.link-list>li>a,
-.wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu ul.link-list>li>a {
+.wsmenu > .wsmenu-list > li > .wsmegamenu.w-75 ul.link-list > li > a,
+.wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu ul.link-list > li > a {
 	color: #2c3e50;
 	font-size: 16px;
 	font-weight: 500;
@@ -3886,19 +3886,19 @@ p.terms-txt a,
 	transition: all 0.3s ease-in-out;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li>.wsmegamenu.w-75 ul.link-list>li>a,
-.rtl-direction .wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu ul.link-list>li>a {
+.rtl-direction .wsmenu > .wsmenu-list > li > .wsmegamenu.w-75 ul.link-list > li > a,
+.rtl-direction .wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu ul.link-list > li > a {
 	font-size: 19px;
 	text-align: right !important;
 }
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	padding: 8px 0 8px 8px;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.rtl-direction .wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.rtl-direction .wsmenu > .wsmenu-list > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.rtl-direction .wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	padding: 8px 8px 8px 0;
 }
 
@@ -3906,7 +3906,7 @@ p.terms-txt a,
 /*   MEGAMENU
 /*------------------------------------------*/
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu {
+.wsmenu > .wsmenu-list > li > .wsmegamenu {
 	padding: 15px 10px;
 	-webkit-border-radius: 8px;
 	-moz-border-radius: 8px;
@@ -3916,7 +3916,7 @@ p.terms-txt a,
 	box-shadow: 0 2px 3px rgba(96, 96, 96, 0.1);
 }
 
-.wsmenu>.wsmenu-list>li.mg_link:hover>a:after {
+.wsmenu > .wsmenu-list > li.mg_link:hover > a:after {
 	content: '';
 	background-color: #fff;
 	position: absolute;
@@ -3933,14 +3933,14 @@ p.terms-txt a,
 	transition: all 1.4s ease-in-out;
 }
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu.w-75 {
+.wsmenu > .wsmenu-list > li > .wsmegamenu.w-75 {
 	width: 76% !important;
 	left: 22%;
 	padding: 20px 10px;
 }
 
-.wsmenu>.wsmenu-list>li>.wsmegamenu .title p,
-.wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu .title p {
+.wsmenu > .wsmenu-list > li > .wsmegamenu .title p,
+.wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu .title p {
 	font-size: 18px;
 	line-height: 1;
 	font-weight: 500;
@@ -3948,8 +3948,8 @@ p.terms-txt a,
 	letter-spacing: 0;
 }
 
-.rtl-direction .wsmenu>.wsmenu-list>li>.wsmegamenu .title p,
-.rtl-direction .wsmenu>.wsmenu-list>li>.wsmegamenu.halfmenu .title p {
+.rtl-direction .wsmenu > .wsmenu-list > li > .wsmegamenu .title p,
+.rtl-direction .wsmenu > .wsmenu-list > li > .wsmegamenu.halfmenu .title p {
 	font-size: 22px;
 	text-align: right !important;
 }
@@ -3958,69 +3958,69 @@ p.terms-txt a,
 /*  NAVBAR HOVER
 /*------------------------------------------*/
 
-.wsmenu>.wsmenu-list.nav-blue-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-blue-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-blue-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-blue-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-blue-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-blue-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #0f53fa !important;
 }
 
-.wsmenu>.wsmenu-list.nav-skyblue-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-skyblue-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-skyblue-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-skyblue-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-skyblue-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-skyblue-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #0195ff !important;
 }
 
-.wsmenu>.wsmenu-list.nav-stateblue-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-stateblue-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-stateblue-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-stateblue-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-stateblue-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-stateblue-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #6064e3 !important;
 }
 
-.wsmenu>.wsmenu-list.nav-green-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-green-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-green-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-green-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-green-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-green-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #0fbc49 !important;
 }
 
-.wsmenu>.wsmenu-list.nav-indigo-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-indigo-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-indigo-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-indigo-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-indigo-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-indigo-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #62147e !important;
 }
 
-.wsmenu>.wsmenu-list.nav-orange-red-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-orange-red-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-orange-red-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-orange-red-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-orange-red-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-orange-red-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #fbce71 !important;
 }
 
-.wsmenu>.wsmenu-list.nav-pink-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-pink-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-pink-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-pink-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-pink-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-pink-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #eb1561 !important;
 }
 
-.wsmenu>.wsmenu-list.nav-purple-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-purple-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-purple-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-purple-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-purple-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-purple-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #6a26da !important;
 }
 
-.wsmenu>.wsmenu-list.nav-red-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-red-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-red-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-red-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-red-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-red-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #f6412d !important;
 }
 
-.wsmenu>.wsmenu-list.nav-violet-red-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-violet-red-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-violet-red-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-violet-red-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-violet-red-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-violet-red-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #c73e9b !important;
 }
 
-.wsmenu>.wsmenu-list.nav-violet-hover>li>ul.sub-menu>li>a:hover,
-.wsmenu>.wsmenu-list.nav-violet-hover>li>.wsmegamenu.w-75 ul.link-list>li>a:hover,
-.wsmenu>.wsmenu-list.nav-violet-hover>li>.wsmegamenu.halfmenu ul.link-list>li>a:hover {
+.wsmenu > .wsmenu-list.nav-violet-hover > li > ul.sub-menu > li > a:hover,
+.wsmenu > .wsmenu-list.nav-violet-hover > li > .wsmegamenu.w-75 ul.link-list > li > a:hover,
+.wsmenu > .wsmenu-list.nav-violet-hover > li > .wsmegamenu.halfmenu ul.link-list > li > a:hover {
 	color: #9400d3 !important;
 }
 
@@ -4046,19 +4046,19 @@ p.terms-txt a,
 /*  Navigation Menu
 /*------------------------------------------*/
 
-.tra-menu.navbar-light .scroll .wsmenu>.wsmenu-list>li a {
+.tra-menu.navbar-light .scroll .wsmenu > .wsmenu-list > li a {
 	color: #463853;
 }
 
-.tra-menu.navbar-light.dark-scroll .scroll .wsmenu>.wsmenu-list>li a,
-.tra-menu.navbar-dark.dark-scroll .scroll .wsmenu>.wsmenu-list>li a {
+.tra-menu.navbar-light.dark-scroll .scroll .wsmenu > .wsmenu-list > li a,
+.tra-menu.navbar-dark.dark-scroll .scroll .wsmenu > .wsmenu-list > li a {
 	color: #fff;
 }
 
-.tra-menu.navbar-light.dark-scroll .scroll .wsmenu>.wsmenu-list .sub-menu li a,
-.tra-menu.navbar-dark.dark-scroll .scroll .wsmenu>.wsmenu-list .sub-menu li a,
-.tra-menu.navbar-light.dark-scroll .scroll .wsmenu>.wsmenu-list li .wsmegamenu a,
-.tra-menu.navbar-dark.dark-scroll .scroll .wsmenu>.wsmenu-list li .wsmegamenu a {
+.tra-menu.navbar-light.dark-scroll .scroll .wsmenu > .wsmenu-list .sub-menu li a,
+.tra-menu.navbar-dark.dark-scroll .scroll .wsmenu > .wsmenu-list .sub-menu li a,
+.tra-menu.navbar-light.dark-scroll .scroll .wsmenu > .wsmenu-list li .wsmegamenu a,
+.tra-menu.navbar-dark.dark-scroll .scroll .wsmenu > .wsmenu-list li .wsmegamenu a {
 	color: #666;
 }
 
@@ -7260,8 +7260,8 @@ span.release-date span {
 	text-align: right;
 }
 
-.newsletter-section .input-group>.custom-select:not(:last-child),
-.newsletter-section .input-group>.form-control:not(:last-child) {
+.newsletter-section .input-group > .custom-select:not(:last-child),
+.newsletter-section .input-group > .form-control:not(:last-child) {
 	border-top-right-radius: 0;
 	border-bottom-right-radius: 0;
 }
@@ -9342,18 +9342,23 @@ h1.h1-md.white-color.text-left {
 .form-btn .btn-success,
 .request-quote-footer .btn-success {
 	color: #fff;
-	background-color: #4CAF50 !important;
+	background-color: #4caf50 !important;
 	border-color: #198754 !important;
 	width: 100%;
 }
 
 @media (min-width: 601px) {
-.request-quote-footer {
-	display: none;
-}
+	.request-quote-footer {
+		display: none;
+	}
 }
 @media (max-width: 600px) {
 	.request-quote-footer {
 		display: block;
 	}
+}
+
+.blog-test ul li {
+	font-size: 1.35rem;
+	margin-bottom: 10px;
 }
