--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4992,12 +4992,12 @@ p.terms-txt a,
 }
 
 .enquiry-form .error {
-	color: #e74c3c;
-	font-size: 14px;
-	font-weight: 300;
-	height: 19px !important;
-	float: right;
-	line-height: 23px;
+    color: #d11603;
+    font-size: 13px;
+    font-weight: 400;
+    height: 19px !important;
+    float: right;
+    line-height: 23px;
 }
 
 .enquiry-form label {
