--- a/public/css/style2.css
+++ b/public/css/style2.css
@@ -8,7 +8,7 @@ html {
 }
 
 body {
-	font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+	font-family: 'Poppins', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 	color: #6c757d;
 	line-height: 1.6666;
 	font-weight: 400;
@@ -1266,7 +1266,7 @@ h4,
 h5,
 h6 {
 	color: #2f353e;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-weight: 500;
 	letter-spacing: -0.75px;
 }
@@ -8670,7 +8670,7 @@ p.forgot-password {
 
 .login-separator-txt {
 	position: relative;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Poppins', sans-serif;
 	font-size: 1.05rem;
 	font-weight: 400;
 }
