--- a/public/css/menu.css
+++ b/public/css/menu.css
@@ -486,7 +486,7 @@
   text-transform: none;
   color: #888;
   font-size: 16px;
-  font-family: 'Roboto', sans-serif; 
+  font-family: 'Poppins', sans-serif; 
   line-height: 22px;
   font-weight: 400;
   letter-spacing: normal;
