--- a/public/fonts/font-rule.css
+++ b/public/fonts/font-rule.css
@@ -1,9 +1,9 @@
 @font-face {
-	font-family: 'Roboto';
+	font-family: 'Poppins';
 	font-style: normal;
 	font-weight: 300 400 700;
 	font-display: swap;
-	src: url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap') format('truetype');
+	src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap') format('truetype');
 }
 
 @font-face {
